fleet/spring-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  labels:
    app: spring-app
spec:
  selector:
    app: spring-app
  ports:
    - name: http
      port: 80
      targetPort: http
