fleet/spring-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-app
  labels:
    app: spring-app
spec:
  rules:
    - host: spring-app.192-168-1-103.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 80
